--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tinymce/tinymce-react": "^3.13.0",
+    "@tiptap/react": "^2.0.0-beta.104",
+    "@tiptap/starter-kit": "^2.0.0-beta.169",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^8.2.0",
