--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
