--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^8.2.0",
+    "html-react-parser": "^1.4.5",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
