--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.44.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "typewriter-effect": "^2.18.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
